configure test-env and test RdsIntegration